# Zero2Prod

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  foo.txt  spec.yaml  sqlx-data.json
configuration/: local.yaml  production.yaml
migrations/: 20230802161543_make_status_not_null_in_subscriptions.sql  20230803171853_create_subscription_tokens_table.sql  20230805120539_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
